Begin implementation of PlotDisplay for scatter/hist/box plots